# amiami-preorders-stats

./: .dockerignore  .env.example  .gitignore  .pdm-python  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  preorders.json  pyproject.toml  run.sh
frontend/: .eslintrc.js  .gitignore  package-lock.json  package.json  vue.config.js
frontend/src/: App.vue  main.js
src/: script.py
src/amiami_api/: __init__.py  api.py  cli.py  config.py  di.py  fx_rates.py  service.py  store.py  telegram_bot.py  utils.py  web.py
src/amiami_api/tests/: test_web.py
tests/: test_corner_cases.py
