[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "amiami-api"
authors = [
    {name = "IdSaf", email = "idolarod1@gmail.com"},
]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.1.0"
description = "Default template for PDM package"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.6.4",
    "autoflake>=2.3.1",
    "isort>=5.13.2",
    "black>=24.3.0",
    "click>=8.1.7",
    "python-dotenv>=1.0.1",
    "print-color>=0.4.6",
]
requires-python = ">=3.11"
readme = "README.md"

[tool.pdm]
distribution = true
