[project]
name = "amiami-api"
authors = [
    {name = "IdSaf", email = "idolarod1@gmail.com"},
]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.1.0"
description = "Default template for PDM package"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.6.4",
    "autoflake>=2.3.1",
    "isort>=5.13.2",
    "black>=24.3.0",
    "click>=8.1.7",
    "python-dotenv>=1.0.1",
    "print-color>=0.4.6",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
requires-python = ">=3.11"
readme = "README.md"

[tool.pdm.scripts]
api.cmd = "src/amiami_api/cli.py"
api.env = {PYTHONPATH = "src/"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "responses>=0.25.3",
    "pytest>=8.3.3",
]

[tool.flake8]
max-line-length = 150

[tool.black]
line-length = 150


[tool.mypy]
no_implicit_optional = true
disable_error_code = [
  "import-untyped",
]
pretty = true
check_untyped_defs = true
allow_subclassing_any = true

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
# asyncio_default_fixture_loop_scope = "function"
# asyncio_mode = "auto"
