[project]
name = "amiami-api"
authors = [
    {name = "IdSaf", email = "idolarod1@gmail.com"},
    {name = "IdSafy", email = "idsaf@outlook.com"},
]
license = {file = "LICENSE",text = "MIT"}
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.1.0"
description = "Default template for PDM package"
dependencies = [
    "pydantic>=2.6.4",
    "python-dotenv>=1.0.1",
    "mypy>=1.10.0",
    "fastapi>=0.115.5",
    "loguru>=0.7.2",
    "dependency-injector>=4.43.0",
    "pydantic-settings>=2.6.1",
    "aiohttp[speedups]>=3.11.2",
    "uvicorn>=0.32.0",
    "python-telegram-bot>=22.1",
]
requires-python = "==3.13.*"
readme = "README.md"

[tool.pdm.scripts]
app.cmd = "uvicorn amiami_api.web:app"
app.env = {PYTHONPATH = "src/"}

npm.cmd = "npm"
npm.working_dir = "frontend"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.7.0",
    "pytest>=8.3.3",
    "httpx>=0.27.2",
    "pytest-asyncio>=0.24.0",
    "aioresponses>=0.7.7",
]

[tool.flake8]
max-line-length = 150

[tool.black]
line-length = 150


[tool.mypy]
no_implicit_optional = true
disable_error_code = [
  "import-untyped",
]
pretty = true
check_untyped_defs = true
allow_subclassing_any = true
plugins = ["pydantic.mypy"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
